compiler/tests/compile-error/type-lowering-errors.arret
(import [stdlib base])

(deftype _ unbound)
          ;^^^^^^^ ERROR unable to resolve `unbound`

(deftype _ (unbound))
           ;^^^^^^^ ERROR unable to resolve `unbound`

(deftype _ quote)
          ;^^^^^ ERROR value cannot be used as a type

(deftype _ 1)
          ;^ ERROR only boolean and symbol type literal atoms are supported

(deftype _ '(1))
            ;^ ERROR only boolean and symbol type literal atoms are supported

(deftype _ [1])
           ;^ ERROR only boolean and symbol type literal atoms are supported

(deftype _ (->))
           ;^^ ERROR type constructor expected